# mountingefs

./: app.py  pyproject.toml
ec2/: ec2_stack.py
